DD-103: Modal position set to fixed so it’s always visible

--- a/public/css/_cp-modal.scss
+++ b/public/css/_cp-modal.scss
@@ -2,7 +2,7 @@
   @include filter(blur, 3px);
 }
 .modal {
-  position: absolute;
+  position: fixed;
   left: 0px;
   right: 0px;
   top: 0px;
